<resources>
    <string name="app_name">lapki</string>
    <string name="return_button">Вернуться</string>
    <string name="entry_head">Вход</string>
    <string name="login">Логин</string>
    <string name="login_hint">Введите свой логин</string>
    <string name="password">Пароль</string>
    <string name="restore_password">Забыли пароль?</string>
    <string name="entry_button">Войти</string>
    <string name="forget">Забыли пароль</string>
    <string name="repeat_password">Подтверждение пароля</string>
    <string name="email">Адрес электронной почты</string>
    <string name="restore">Восстановить</string>
    <string name="registration">Регистрация</string>
    <string name="guest">Гость</string>
    <string name="name">Имя</string>
    <string name="name_hint">Введите свое имя</string>
    <string name="surname">Фамилия</string>
    <string name="surname_hint">Введите свою фамилию</string>
    <string name="birthdate">Дата рождения</string>
    <string name="sex">Пол</string>
    <string name="women">Женщина</string>
    <string name="men">Мужчина</string>
    <string name="city">Город</string>
    <string name="city_hint">Введите свой город</string>
    <string name="telephone">Телефон</string>
    <string name="telephone_hint">Введите свой телефон</string>
    <string name="registr">Зарегистрироваться</string>
    <string name="shelters">Приюты</string>
    <string name="add">Добавить</string>
    <string name="pets">Подопечные</string>
    <string name="pets_lose">Потеряшки</string>
    <string name="shelter_name">Название приюта</string>
    <string name="shelter_data">Данные о приюте</string>
    <string name="shelter_bd">Дата создания:</string>
    <string name="city_with_points">Город:</string>
    <string name="describe">Описание:</string>
    <string name="shelter_type">Тип приюта:</string>
    <string name="shelter_delete">Удалить приют</string>
    <string name="shelter_requests">Смотреть заявки/Заявка волонтера</string>
    <string name="return_list">Вернутся к списку</string>
    <string name="role">Статус</string>
    <string name="pet_data">Данные о питомце</string>
    <string name="birthdate_with_points">Дата рождения:</string>
    <string name="pet_type">Вид:</string>
    <string name="pet_shelter">Приют:</string>
    <string name="sex_with_point">Пол:</string>
    <string name="breed">Порода:</string>
    <string name="active">Активный:</string>
    <string name="size">Размер:</string>
    <string name="hypo">Гипоаллергенный:</string>
    <string name="dressir">Дрессировка:</string>
    <string name="dogs">Отношения с другими собаками:</string>
    <string name="animal">Отношения с другими животными:</string>
    <string name="child">Отношения с грудничками:</string>
    <string name="children">Отношения с детьми:</string>
    <string name="teens">Отношения с подростками:</string>
    <string name="ills">Болезни:</string>
    <string name="sounds">Отношения к громким звукам:</string>
    <string name="talk">Общительность:</string>
    <string name="pet_delete">Удалить питомца</string>
    <string name="pet_combo">Проверить совместимость/Результаты</string>
    <string name="fill_request_parent">Заполнить заявку на опекунство</string>
    <string name="return_to_shelter">Вернутся к приюту</string>
    <string name="wool">Шерсть</string>
    <string name="pet_add">Добавление питомца</string>
    <string name="pet_name">Введите имя питомца</string>
    <string name="describe_without_point">Описание</string>
    <string name="shelter_without_point">Приют</string>
    <string name="breed_without_point">Порода</string>
    <string name="pet_women">Женский</string>
    <string name="pet_men">Мужской</string>
    <string name="active_without_points">Активность</string>
    <string name="size_sm">Размер в см</string>
    <string name="wool_without_points">Шерсть</string>
    <string name="hypo_without_points">Гипоаллергенный</string>
    <string name="dressirovka">Поддается дрессировке</string>
    <string name="dogs_without_points">Отношения с другими собаками</string>
    <string name="animals_without_points">Отношения с другими животными</string>
    <string name="child_without_points">Отношения с грудными детьми</string>
    <string name="children_without_points">Отношения с детьми</string>
    <string name="teens_without_points">Отношения с подростками</string>
    <string name="ills_without_points">Болезни</string>
    <string name="sounds_without_points">Отношение к громким звукам</string>
    <string name="talk_without_points">Общительный</string>
    <string name="shelter_add">Добавление приюта</string>
    <string name="shelter_name_hint">Введите название приюта</string>
    <string name="shelter_bd_without_points">Дата создания</string>
    <string name="shelter_type_without_points">Тип приюта</string>
    <string name="city_shelter_hint">Введите город</string>
    <string name="shelter_role">Роль приюта</string>
    <string name="change_data">Изменить данные</string>
    <string name="entry_name">Введите свое имя</string>
    <string name="entry_surname">Введите свою фамилию</string>
    <string name="save">Сохранить</string>
    <string name="request_vol">Заявки волонтера</string>
    <string name="request_parents">Заявки опекунов</string>
    <string name="login_with_brakets">(Логин)</string>
    <string name="user_data">Данные о пользователе</string>
    <string name="telephone_with_points">Телефон:</string>
    <string name="email_with_points">Электронная почта:</string>
    <string name="add_information">Дополнительная информация:</string>
    <string name="change">Изменить</string>
    <string name="delete">Удалить</string>
    <string name="get_test">Пройти тестирование</string>
    <string name="test_result">Результаты тестирования</string>
    <string name="combination">Сочетания</string>
    <string name="request">Заявки</string>
    <string name="sharp">#</string>
    <string name="_0000">0000</string>
    <string name="role_with_points">Статус: </string>
    <string name="fio">ФИО: </string>
    <string name="type">Тип: </string>
    <string name="request_view">Просмотр заявок</string>
    <string name="equest_volonteer">Заявка волонтера</string>
    <string name="comment">Комментарий</string>
    <string name="accept">Принять</string>
    <string name="reject">Отклонить</string>
    <string name="request_owner">Заявка на опекунство</string>
    <string name="pet_type_without_points">Вид</string>
    <string name="add_request">Добавление заявки</string>
    <string name="question">Вопрос: </string>
    <string name="testing">Тестирование</string>
    <string name="results">Результаты</string>
    <string name="statistic">Статистика</string>
</resources>