<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".PetAccountActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/activity_petac_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/role"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/black"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/activity_petac_imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_launcher_foreground" />
                        <TextView
                android:id="@+id/activity_petac_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/black"/>

        </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pet_data"
                android:textStyle="bold"
                android:textColor="@color/black"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@color/lightb"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/birthdate_with_points"
                    android:textColor="@color/black"/>
                <TextView
                    android:id="@+id/activity_petac_bd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/describe"
                    android:textColor="@color/black"/>
                <TextView
                    android:id="@+id/activity_petac_describe"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pet_type"
                    android:textColor="@color/black"/>
                <TextView
                    android:id="@+id/activity_petac_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pet_shelter"
                    android:textColor="@color/black"/>
                <TextView
                    android:id="@+id/activity_petac_shelter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sex_with_point"
                    android:textColor="@color/black"/>
                <TextView
                    android:id="@+id/activity_petac_sex"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/breed"
                    android:textColor="@color/black"/>
                <TextView
                    android:id="@+id/activity_petac_breed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/active"
                    android:textColor="@color/black"/>
                <TextView
                    android:id="@+id/activity_petac_active"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/size"
                    android:textColor="@color/black"/>
                <TextView
                    android:id="@+id/activity_petac_size"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/wool"
                    android:textColor="@color/black"/>
                <TextView
                    android:id="@+id/activity_petac_wool"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hypo"
                    android:textColor="@color/black"/>
                <TextView
                    android:id="@+id/activity_petac_hypo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dressir"
                    android:textColor="@color/black"/>
                <TextView
                    android:id="@+id/activity_petac_dressir"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dogs"
                    android:textColor="@color/black"/>
                <TextView
                    android:id="@+id/activity_petac_dogs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/animal"
                    android:textColor="@color/black"/>
                <TextView
                    android:id="@+id/activity_petac_animal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/child"
                    android:textColor="@color/black"/>
                <TextView
                    android:id="@+id/activity_petac_child"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/children"
                    android:textColor="@color/black"/>
                <TextView
                    android:id="@+id/activity_petac_children"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/teens"
                    android:textColor="@color/black"/>
                <TextView
                    android:id="@+id/activity_petac_teens"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ills"
                    android:textColor="@color/black"/>
                <TextView
                    android:id="@+id/activity_petac_ills"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sounds"
                    android:textColor="@color/black"/>
                <TextView
                    android:id="@+id/activity_petac_sounds"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/talk"
                    android:textColor="@color/black"/>
                <TextView
                    android:id="@+id/activity_petac_talk"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"/>
                <TextView
                    android:id="@+id/activity_petac_rolid"
                    android:layout_width="match_parent"
                    android:layout_height="1sp"
                    android:text=""
                    android:textColor="@color/black"
                    android:visibility="invisible"/>
                <TextView
                    android:id="@+id/activity_petac_shelid"
                    android:layout_width="match_parent"
                    android:layout_height="1sp"
                    android:text=""
                    android:textColor="@color/black"
                    android:visibility="invisible"/>
                <Button
                    android:id="@+id/activity_petac_change"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/change_data" />
                <Button
                    android:id="@+id/activity_petac_del"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pet_delete" />
            </LinearLayout>

            <Button
                android:id="@+id/activity_petac_test"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/get_test" />
            <Button
                android:id="@+id/activity_petac_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pet_combo" />

            <Button
                android:id="@+id/activity_petac_req"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fill_request_parent" />

            <Button
                android:id="@+id/activity_petac_return_shelter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/return_to_shelter" />

            <Button
                android:id="@+id/activity_petac_return_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/return_list" />


        </LinearLayout>
    </ScrollView>
</LinearLayout>