<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".Accaunt">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


                <LinearLayout
            android:layout_width="94dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/activity_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/activity_user_surname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/surname"
                android:textColor="@color/black"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/activity_user_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_with_brakets"
                android:textColor="@color/black"
                android:textStyle="bold" />
        </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_data"
                android:textColor="@color/black"
                android:textStyle="bold" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/lightb">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/birthdate_with_points"
                android:textColor="@color/black"
                />
            <TextView
                android:id="@+id/activity_user_birthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sex_with_point"
                android:textColor="@color/black"
                />
            <TextView
                android:id="@+id/activity_user_sex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/city_with_points"
                android:textColor="@color/black"
                />
            <TextView
                android:id="@+id/activity_user_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/telephone_with_points"
                android:textColor="@color/black"
                />
            <TextView
                android:id="@+id/activity_user_telephone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email_with_points"
                android:textColor="@color/black"
                />
            <TextView
                android:id="@+id/activity_user_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_information"
                android:textColor="@color/black"
                />
            <TextView
                android:id="@+id/activity_user_describe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/lightb">

                <Button
                    android:id="@+id/activity_user_change"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/change" />

                <Button
                    android:id="@+id/activity_user_delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/delete" />
            </LinearLayout>
        </LinearLayout>

            <Button
                android:id="@+id/activity_user_test"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/get_test" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/lightb">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/test_result"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/lightb">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/combination"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

            </LinearLayout>
            <Button
                android:id="@+id/activity_user_request"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/request" />

        </LinearLayout>


    </ScrollView>
</LinearLayout>