<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".StartActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/activity_start_shelter"
            android:layout_width="281dp"
            android:layout_height="122sp"
            android:backgroundTint="@color/button"
            android:text="@string/shelters"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.471"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.414" />

        <LinearLayout
            android:layout_width="281dp"
            android:layout_height="131dp"
            android:gravity="center"
            android:orientation="horizontal">


            <Button
                android:id="@+id/activity_start_pet"
                android:layout_width="wrap_content"
                android:layout_height="122sp"
                android:layout_weight="1"
                android:shadowColor="@color/black"
                android:text="@string/pets" />

            <Button
                android:id="@+id/activity_start_pet_lose"
                android:layout_width="wrap_content"
                android:layout_height="122sp"
                android:layout_weight="1"
                android:text="@string/pets_lose" />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>